clusters/k3s-home/apps/media/bazarr/httproute.yaml
# clusters/k3s-home/apps/media/bazarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-http-route
  namespace: media # The namespace where Bazarr is running
spec:
  # This links the route to our new Gateway
  parentRefs:
    - name: main-gateway
      namespace: networking # Namespace where the Gateway lives

  # This is the domain name you will use to access the service
  hostnames:
    - "bazarr.fletcherlabs.net"

  # This defines the routing rule
  rules:
    - backendRefs:
        - name: bazarr # The name of the Bazarr Kubernetes Service
          port: 6767 # The port of the Bazarr Service
